testsuite/poke.pkl/funcall-def-diag-1.pk
/* { dg-do compile } */

defun def = (int a, int b = 0, int c) int: /* { dg-error "" } */
  {
   return a + b + c;
  }
